--- a/thermostat.html
+++ b/thermostat.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
 
     
 
@@ -83,11 +83,11 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
-                     <p>Smart thermostats connect to your Wi-Fi network and can be controlled either via the manufacturers app and/or HomeKit, delivering control to your iPhone, iWatch, iPad.&nbsp;<span style="font-size: 1rem;">These thermostats can respond as part of an automation, Eg: turn the heating off when nobody is home. &nbsp;</span></p><p>
+                     <p>Smart thermostats connect to your Wi-Fi network and can be controlled either via the manufacturers app and/or HomeKit delivering control to your iPhone, iWatch, iPad. Enjoy the convenience of being able to operate your air conditioning from anywhere.. on your way home or after leaving the property.</p><p>
 </p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p><span style="font-size: 1rem;">The result is that they can work proactively to keep your home at the most comfortable temperature for you without you having to lift a finger. And they do it all with a high degree of efficiency, capable of reducing energy consumption by up to 30%.</span></p>
+                     <p><span style="font-size: 1rem;">Smart thermostats can respond as part of an automation, Eg: turn the heating off when nobody is home. &nbsp;The result is that they can work proactively to keep your home at the most comfortable temperature for you without you having to lift a finger. And they do it all with a high degree of efficiency, capable of reducing energy consumption by up to 30%.</span></p>
                 </div>
                 
             </div>
@@ -122,7 +122,7 @@
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Smart Thermostats&nbsp;</h4>
                         <p class="mbr-text mbr-fonts-style display-7">There are many different types of smart thermostats.
-The Nest thermostat is popular (due to its sleek appearance.. but it's also the most expensive at $350 unfitted). Alternatives start from $180 and they are wired directly to your existing air conditioning system.<br></p>
+The Nest thermostat is popular (due to its sleek appearance.. but it's also the most expensive at ~$350 unfitted). Alternatives start from $180 and they are wired directly to your existing air conditioning system by a professional.<br></p>
                     </div>
                 </div>
             </div>
@@ -135,7 +135,7 @@ The Nest thermostat is popular (due to its sleek appearance.. but it's also the 
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             <br><br>WiFi Controllers</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Wifi controllers are used when a smart thermostat isn't required. &nbsp;A number of major brands produce Wifi controllers that can be purchased and installed by heating/cooling specialists. &nbsp;Depending upon brand these can vary in cost from $250 up to ~$1100.&nbsp;</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Wifi controllers are used when a smart thermostat isn't required. &nbsp;A number of major brands produce Wifi controllers that can be purchased and installed by heating/cooling specialists. &nbsp;This approach leaves customers with their original wall mounted thermostat and adds the convenience of control via Siri or HomeKit, Google, etc. &nbsp;Depending upon the brand the Wifi controllers can vary in price from $250 up to ~$1100.&nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@ The Nest thermostat is popular (due to its sleek appearance.. but it's also the 
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Unique Styles
                         </h4>
-                        <p class="mbr-text mbr-fonts-style display-7">HomeKit renders the thermostat to look like a stylish dial that can be controlled by your finger, or alternatively by voice.
+                        <p class="mbr-text mbr-fonts-style display-7">Whether you choose a smart thermostat or go the Wifi controller route, HomeKit renders the thermostat to look like a stylish dial that can be controlled by your finger, or alternatively by voice.
 "Hey Siri, set thermostat to 30 degrees".</p>
                     </div>
                 </div>
