--- a/terms.html
+++ b/terms.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-sM5vh72ryB" id="content5-6n">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content5 cid-sM5vh72ryB" id="content5-6n">
 
     
 
