--- a/blinds.html
+++ b/blinds.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
 
     
 
@@ -199,7 +199,7 @@ Now it's possible with small motors (or switches if you already have motors) tha
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
