--- a/warranty.html
+++ b/warranty.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html  >
 <head>
+<link rel="canonical" href="https://house-mate.com.au" />
   <!-- Site made with Mobirise Website Builder v4.12.4, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
