--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="canonical" href="https://house-mate.com.au" />
+<link rel="canonical" href="https://house-mate.com.au/index.html" />
   <!-- Site made with Mobirise Website Builder v4.12.4, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
 
     
 
