--- a/lighting.html
+++ b/lighting.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html  >
+<html lang="en">
 <head>
-<link rel="canonical" href="https://house-mate.com.au" />
+<link rel="canonical" href="https://house-mate.com.au/lighting.html" />
   <!-- Site made with Mobirise Website Builder v4.12.4, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
   <meta name="description" content="Hey Siri turn on the lights! Control your lighting from your phone. Apple HomeKit compatible lighting solutions. Smart home lighting automation with House-mate.">
   
   
-  <title>House-mate Lighting</title>
+  <title>House-mate Lighting Automation</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -51,13 +51,13 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"> <a class="nav-link link dropdown-toggle text-white display-4" href="power.html" data-toggle="dropdown-submenu" aria-expanded="false">Main Menu</a>                     <div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="lighting.html">Lighting</a><a class="dropdown-item text-white display-4" href="power.html" aria-expanded="false">Power Points</a>  <a class="dropdown-item text-white display-4" href="blinds.html" aria-expanded="false">Blinds</a><a class="dropdown-item text-white display-4" href="irrigation.html" aria-expanded="false">Irrigation</a><a class="dropdown-item text-white display-4" href="thermostat.html" aria-expanded="false">Thermostat</a><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">Security<br></a><a class="dropdown-item text-white display-4" href="garage.html" aria-expanded="false">Garage Door<br></a><a class="dropdown-item text-white display-4" href="pool.html" aria-expanded="false">Pool &amp; Spa</a><a class="dropdown-item text-white display-4" href="remote.html" aria-expanded="false">Remote Blaster</a><a class="dropdown-item text-white display-4" href="cbus.html" aria-expanded="false">CBUS</a><a class="dropdown-item text-white display-4" href="sensors.html" aria-expanded="false">Network Sensors</a>  </div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" href="contact.html" aria-expanded="false" data-toggle="dropdown-submenu">FAQ's</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="installation.html" aria-expanded="false">Installation</a><a class="dropdown-item text-white display-4" href="faq.html" aria-expanded="false">FAQ's</a><a class="dropdown-item text-white display-4" href="warranty.html" aria-expanded="false">Warranty</a></div></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html" aria-expanded="false">About</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="tel:+61414350590" aria-expanded="false">Call</a></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown"> <a class="nav-link link dropdown-toggle text-white display-4" href="power.html" data-toggle="dropdown-submenu" aria-expanded="true">Main Menu</a>                     <div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="lighting.html">Lighting</a><a class="dropdown-item text-white display-4" href="power.html" aria-expanded="false">Power Points</a>  <a class="dropdown-item text-white display-4" href="blinds.html" aria-expanded="false">Blinds</a><a class="dropdown-item text-white display-4" href="irrigation.html" aria-expanded="false">Irrigation</a><a class="dropdown-item text-white display-4" href="thermostat.html" aria-expanded="false">Thermostat</a><a class="dropdown-item text-white display-4" href="security.html" aria-expanded="false">Security<br></a><a class="dropdown-item text-white display-4" href="garage.html" aria-expanded="false">Garage Door<br></a><a class="dropdown-item text-white display-4" href="pool.html" aria-expanded="false">Pool &amp; Spa</a><a class="dropdown-item text-white display-4" href="remote.html" aria-expanded="false">Remote Blaster</a><a class="dropdown-item text-white display-4" href="cbus.html" aria-expanded="false">CBUS</a><a class="dropdown-item text-white display-4" href="sensors.html" aria-expanded="false">Network Sensors</a>  </div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" href="contact.html" aria-expanded="false" data-toggle="dropdown-submenu">FAQ's</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="installation.html" aria-expanded="false">Installation</a><a class="dropdown-item text-white display-4" href="faq.html" aria-expanded="false">FAQ's</a><a class="dropdown-item text-white display-4" href="warranty.html" aria-expanded="false">Warranty</a></div></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html" aria-expanded="false">About</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="tel:+61414350590" aria-expanded="false">Call</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="header1 cid-spawN8CQgz" id="header16-j">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="header1 cid-spawN8CQgz" id="header16-j">
 
     
 
