--- a/thermostat.html
+++ b/thermostat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="canonical" href="https://house-mate.com.au/thermnostat.html" />
+<link rel="canonical" href="https://house-mate.com.au/thermostat.html" />
   <!-- Site made with Mobirise Website Builder v4.12.4, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
