Analytics embedded into pages

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 <head>
 <link rel="canonical" href="https://house-mate.com.au/index.html" />
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-224447802-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-224447802-1');
+</script>
+
   <!-- Site made with Mobirise Website Builder v4.12.4, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
