--- a/irrigation.html
+++ b/irrigation.html
@@ -95,7 +95,7 @@
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
                      <p>House-mate smart irrigation solutions connect sprinkler controllers to your Wi-Fi network and enable control using HomeKit™ or Siri™.
-</p><p>House-mate smart irrigation solutions automatically adjust watering every day based on localised weather information (rainfall, temperature, wind and evaporation).</p><p><span style="font-size: 1rem;">Conveniently operate your sprinklers from anywhere using the HomeKit™ app or by voice using Siri™. Google and Alexa solutions also available.&nbsp;</span></p>
+</p><p>Smart irrigation solutions automatically adjust watering every day based on localised weather information (rainfall, temperature, wind and evaporation).</p><p><span style="font-size: 1rem;">Conveniently operate your sprinklers from anywhere using the HomeKit™ app or by voice using Siri™. Google and Alexa solutions also available.&nbsp;</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
                      <p>Smart irrigation can cut down water usage by up to 50% compared to conventional systems. &nbsp;Only water when and where it’s needed. <span style="font-size: 1rem;">Cycle any zone(s) at the touch of a button or via voice command. "Hey Siri, water the front lawn".</span></p><p><span style="font-size: 1rem;">Modernising water management means healthier gardens, lower water &amp; energy consumption. Smart irrigation delivers a thriving and lush landscape.</span></p>
