--- a/irrigation.html
+++ b/irrigation.html
@@ -94,7 +94,7 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
-                     <p>House-mate smart irrigation solutions connect sprinkler controllers to your Wi-Fi network and enable control using HomeKit™ or Siri™.
+                     <p>House-mate smart irrigation solutions integrates your Wi-Fi irrigation controller for use with HomeKit™ or Siri™.
 </p><p>Smart irrigation solutions automatically adjust watering every day based on localised weather information (rainfall, temperature, wind and evaporation).</p><p><span style="font-size: 1rem;">Conveniently operate your sprinklers from anywhere using the HomeKit™ app or by voice using Siri™. Google and Alexa solutions also available.&nbsp;</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
