--- a/index22.html
+++ b/index22.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="canonical" href="https://house-mate.com.au/index22.html.html" />
+<link rel="canonical" href="https://house-mate.com.au/index22.html"/>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-224447802-1">
 </script>
