--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <link rel="canonical" href="https://house-mate.com.au/" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://house-mate.com.au/apple-touch-icon-180x180.png">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-224447802-1">
 </script>
