--- a/cases.html
+++ b/cases.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
-<html  >
+<html lang="en">
+<html>
 <head>
+<link rel="canonical" href="https://house-mate.com.au/cases.html" />
+<link rel="apple-touch-icon" sizes="180x180 href="https://house-mate.com.au/assets/images/apple-touch-icon-180x180.png">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-224447802-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-224447802-1');
+</script>
+
   <!-- Site made with Mobirise Website Builder v4.12.4, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
