small images home page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
 
     
 
@@ -112,7 +112,7 @@
                         </div>
                         <div class="mbr-crt-title">
                             <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7">
-                                <a href="lighting.html">Lighting</a></h4>
+                                <a href="lighting.html"><u>Lighting</u></a></h4>
                         </div>
                     </div>                
 
@@ -127,7 +127,7 @@
                             <a href="blinds.html"><span class="mbr-iconfont mbri-target" style="color: rgb(20, 157, 204); fill: rgb(20, 157, 204);"></span></a>
                         </div>
                         <div class="mbr-crt-title">
-                            <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7"><a href="blinds.html">Blinds</a></h4>
+                            <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7"><a href="blinds.html"><u>Blinds</u></a></h4>
                         </div>
                     </div>
                     <div class="card-box">
@@ -148,7 +148,7 @@
                         </div>
                         <div class="mbr-crt-title">
                             <h4 class="card-title py-2 mbr-crt-title mbr-fonts-style display-7">
-                                <a href="security.html">Security</a></h4>
+                                <a href="security.html"><u>Security</u></a></h4>
                         </div>
                     </div>                
 
@@ -199,7 +199,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><strong><a href="thermostat.html">Heating and Cooling</a></strong><br><br>Automatically turn on the heating when your approach home or switch it off when the last person leaves. Bring your existing air conditioning or central heating system into the smart home.</p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><strong><u><a href="thermostat.html">Heating and Cooling</a></u></strong><br><br>Automatically turn on the heating when your approach home or switch it off when the last person leaves. Bring your existing air conditioning or central heating system into the smart home.</p>
                     </div>
                 </div>
 
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><strong><a href="remote.html">Audio / Visual</a></strong> <br><br>Control your TV, projector, or amplifier via HomeKit. &nbsp;Capture regularly used buttons from your remote controls and operate them via your phone or by voice. "Hey Siri, turn on TV"<br></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><strong><u><a href="remote.html">Audio / Visual</a></u></strong> <br><br>Control your TV, projector, or amplifier via HomeKit. &nbsp;Capture regularly used buttons from your remote controls and operate them via your phone or by voice. "Hey Siri, turn on TV"<br></p>
                     </div>
                 </div>
             </div>
@@ -235,7 +235,7 @@
 
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            <strong><a href="garage.html">Garage door </a></strong><br><br>Control garages or gates via HomeKit, query their status easily from anywhere. Compatible with most common brands. "Hey Siri, close the garage door"</p>
+                            <strong><u><a href="garage.html">Garage door </a></u></strong><br><br>Control garages or gates via HomeKit, query their status easily from anywhere. Compatible with most common brands. "Hey Siri, close the garage door"</p>
                     </div>
                 </div>
 
@@ -249,7 +249,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><a href="pool.html">Pool and Spa</a><br><br>Control any swimming pool or spa functions such as temperature, pumps, chlorination. Pre-heat the spa before you come home. "Hey Siri, set the spa temperature to 35 degrees"<br><br><br></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><a href="pool.html"><u>Pool and Spa</u></a><br><br>Control any swimming pool or spa functions such as temperature, pumps, chlorination. Pre-heat the spa before you come home. "Hey Siri, set the spa temperature to 35 degrees"<br><br><br></p>
                     </div>
                 </div>
             </div>
@@ -297,7 +297,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
