--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
 
             <div class="mbr-figure m-auto" style="width: 50%;">
-                <img src="assets/images/b-982x486.jpg" alt="Mobirise" title="">
+                <img src="assets/images/b-1-982x486.jpg" alt="Mobirise" title="">
             </div>
 
             <div class="block-content align-left">
@@ -219,7 +219,7 @@
             </div>
 
             <div class="mbr-figure m-auto" style="width: 50%;">
-                <img src="assets/images/a-982x552.jpg" alt="Mobirise" title="">
+                <img src="assets/images/a-1-982x552.jpg" alt="Mobirise" title="">
             </div>
 
             <div class="block-content align-left">
