--- a/power.html
+++ b/power.html
@@ -127,7 +127,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/pw1-225x225.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/zwave-220x220.jpg" alt="House-mate" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
