--- a/lighting.html
+++ b/lighting.html
@@ -123,7 +123,7 @@
     
 
     
-    <div class="container-fluid">
+    <div class="container">
         <div class="media-container-row">
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
