--- a/security.html
+++ b/security.html
@@ -124,7 +124,7 @@
     
 
     
-    <div class="container-fluid">
+    <div class="container">
         <div class="media-container-row">
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
