--- a/remote.html
+++ b/remote.html
@@ -127,7 +127,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/remotes-342x217.jpeg" alt="Mobirise" title="">
+                        <img src="assets/images/remotes-342x217.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         
