--- a/index.html
+++ b/index.html
@@ -302,6 +302,9 @@
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-62578448904db30e"></script>
+
   
   
   <input name="animation" type="hidden">
