--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta name="description" content="Home automation using Apple HomeKit or Google Home. Achieve comfort, security, and peace of mind with a smart home designed by House-mate.">
   
   
-  <title>Smart Home Solutions | House-mate: Build your smart home.</title>
+  <title>Smart Home Solutions | House-mate: Design your integrated home.</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
