--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1"><br>House-Mate Automation&nbsp;<br></h1>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">Smart home solution company</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">A smart home solution company</h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Control lighting, alarm system &amp; security cameras, blinds, irrigation, heating &amp; cooling thermostats, garage door, gates and more... from anywhere for optimal convenience, security, and peace of mind.</p><p><a href="index.html#bottom"></a>House-Mate smart home solutions suit existing homes or new builds and deliver truly centralised home automation. <br>
 <br>You choose whether its via Apple HomeKit™, Google Home™, or Amazon Alexa™.<br><br>Change the way you interact with your home today.</p><p></p>
                 
