webpages body webp conversion

--- a/cases.html
+++ b/cases.html
@@ -120,7 +120,15 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/capture-596x328.png" alt="Mobirise" title="">
+                       
+
+<picture>
+<source type="image/webp" srcset="assets/images/webp/capture-596x328.webp">
+<img src="assets/images/capture-596x328.png" alt="House-mate" title="">
+
+</picture>
+
+
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Large Caulfield Home</h4>
@@ -133,7 +141,14 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/capture-390x383.png" alt="Mobirise" title="">
+                       
+
+<picture>
+<source type="image/webp" srcset="assets/images/webp/capture-390x383.webp">
+<img src="assets/images/capture-390x383.png" alt="House-mate" title="">
+
+</picture>
+
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
