2nd batch of webp body of html images conversion

--- a/security.html
+++ b/security.html
@@ -55,10 +55,9 @@
                 <span class="navbar-logo">
                     <a href="index.html">
                         <picture>
-<source type="image/webp" srcset="assets/images/webp/output-onlinepngtools-1-removebg-preview-2-96x88.webp">
-<img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="House-mate" title="" style="height: 3.8rem;">
-
-</picture>
+                            <source type="image/webp" srcset="assets/images/webp/output-onlinepngtools-1-removebg-preview-2-96x88.webp">
+                            <img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="House-mate" title="" style="height: 3.8rem;">
+                        </picture>
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
@@ -133,7 +132,10 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/sec1-227x220.png" alt="Mobirise" title="">
+                        <picture>
+                            <source type="image/webp" srcset="assets/images/webp/sec1-227x220.webp">
+                            <img src="assets/images/sec1-227x220.png" alt="House-mate" title="">
+                        </picture>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -146,7 +148,10 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/sec2-226x220.png" alt="Mobirise" title="">
+                        <picture>
+                            <source type="image/webp" srcset="assets/images/webp/sec2-226x220.webp">
+                            <img src="assets/images/sec2-226x220.png" alt="House-mate" title="">
+                        </picture>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -159,7 +164,10 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/sec4-1-225x220.png" alt="Mobirise" title="">
+                        <picture>
+                            <source type="image/webp" srcset="assets/images/webp/sec4-1-225x220.webp">
+                            <img src="assets/images/sec4-1-225x220.png" alt="House-mate" title="">
+                        </picture>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
