--- a/sensors.html
+++ b/sensors.html
@@ -54,7 +54,10 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                        <picture>
+                            <source type="image/webp" srcset="assets/images/webp/output-onlinepngtools-1-removebg-preview-2-96x88.webp">
+                            <img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="House-mate" title="" style="height: 3.8rem;">
+                        </picture>
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
@@ -116,7 +119,10 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/network-sensor-220x220.jpg" alt="Mobirise" title="">
+                        <picture>
+                            <source type="image/webp" srcset="assets/images/webp/network-sensor-220x220.webp">
+                            <img src="assets/images/network-sensor-220x220.jpg" alt="House-mate" title="">
+                        </picture>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Good to be in the know</h4>
