--- a/power.html
+++ b/power.html
@@ -55,10 +55,9 @@
                 <span class="navbar-logo">
                     <a href="index.html">
                         <picture>
-<source type="image/webp" srcset="assets/images/webp/output-onlinepngtools-1-removebg-preview-2-96x88.webp">
-<img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="House-mate" title="" style="height: 3.8rem;">
-
-</picture>
+                            <source type="image/webp" srcset="assets/images/webp/output-onlinepngtools-1-removebg-preview-2-96x88.webp">
+                            <img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="House-mate" title="" style="height: 3.8rem;">
+                        </picture>
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
@@ -131,7 +130,10 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/zwave-220x220.jpg" alt="House-mate" title="">
+                        <picture>
+                            <source type="image/webp" srcset="assets/images/webp/zwave-220x220.webp">
+                            <img src="assets/images/zwave-220x220.jpg" alt="House-mate" title="">
+                        </picture>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -144,7 +146,10 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/pw2-220x220.png" alt="Mobirise" title="">
+                        <picture>
+                            <source type="image/webp" srcset="assets/images/webp/pw2-220x220.webp">
+                            <img src="assets/images/pw2-220x220.png" alt="House-mate" title="">
+                        </picture>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -158,7 +163,10 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/hk3-220x220.png" alt="Mobirise" title="">
+                        <picture>
+                            <source type="image/webp" srcset="assets/images/webp/hk3-220x220.webp">
+                            <img src="assets/images/hk3-220x220.png" alt="House-mate" title="">
+                        </picture>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
