--- a/remote.html
+++ b/remote.html
@@ -55,10 +55,9 @@
                 <span class="navbar-logo">
                     <a href="index.html">
                         <picture>
-<source type="image/webp" srcset="assets/images/webp/output-onlinepngtools-1-removebg-preview-2-96x88.webp">
-<img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="House-mate" title="" style="height: 3.8rem;">
-
-</picture>
+                            <source type="image/webp" srcset="assets/images/webp/output-onlinepngtools-1-removebg-preview-2-96x88.webp">
+                            <img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="House-mate" title="" style="height: 3.8rem;">
+                        </picture>
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
@@ -131,7 +130,10 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/remotes-342x217.jpg" alt="Mobirise" title="">
+                        <picture>
+                            <source type="image/webp" srcset="assets/images/webp/remotes-342x217.webp">
+                            <img src="assets/images/remotes-342x217.jpg" alt="House-mate" title="">
+                        </picture>
                     </div>
                     <div class="card-box">
                         
