--- a/thermostat.html
+++ b/thermostat.html
@@ -55,10 +55,9 @@
                 <span class="navbar-logo">
                     <a href="index.html">
                        <picture>
-<source type="image/webp" srcset="assets/images/webp/output-onlinepngtools-1-removebg-preview-2-96x88.webp">
-<img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="House-mate" title="" style="height: 3.8rem;">
-
-</picture>
+                            <source type="image/webp" srcset="assets/images/webp/output-onlinepngtools-1-removebg-preview-2-96x88.webp">
+                            <img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="House-mate" title="" style="height: 3.8rem;">
+                        </picture>
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
@@ -132,7 +131,10 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/screen-shot-2021-04-04-at-5.11.17-pm-220x220.png" alt="Mobirise" title="">
+                        <picture>
+                            <source type="image/webp" srcset="assets/images/webp/screen-shot-2021-04-04-at-5.11.17-pm-220x220.webp">
+                            <img src="assets/images/screen-shot-2021-04-04-at-5.11.17-pm-220x220.png" alt="House-mate" title="">
+                        </picture>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -146,7 +148,10 @@ The Nest thermostat is popular (due to its sleek appearance at ~$350 unfitted). 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/ther2-220x220.png" alt="Mobirise" title="">
+                        <picture>
+                            <source type="image/webp" srcset="assets/images/webp/ther2-220x220.webp">
+                            <img src="assets/images/ther2-220x220.png" alt="House-mate" title="">
+                        </picture>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">WiFi Controllers</h4>
@@ -158,7 +163,10 @@ The Nest thermostat is popular (due to its sleek appearance at ~$350 unfitted). 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/screen-shot-2021-04-13-at-10.34.54-pm-220x220.png" alt="Mobirise" title="">
+                        <picture>
+                            <source type="image/webp" srcset="assets/images/webp/screen-shot-2021-04-13-at-10.34.54-pm-220x220.webp">
+                            <img src="assets/images/screen-shot-2021-04-13-at-10.34.54-pm-220x220.png" alt="House-mate" title="">
+                        </picture>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
