furnando link embedded

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    <br>© Copyright 2022 House-Mate Automations</p>
+                    <br><a href="https://furnando.com.au">©</a> Copyright 2022 House-Mate Automations</p>
             </div>
         </div>
     </div>
