replaced html with png and jpg references

--- a/blinds.html
+++ b/blinds.html
@@ -57,6 +57,7 @@
 
 <picture>
 <source type="image/webp" srcset="assets/images/webp/output-onlinepngtools-1-removebg-preview-2-96x88.webp">
+<img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="Mobirise" title="" style="height: 3.8rem;">
 
 </picture>
 
@@ -140,6 +141,7 @@
 
 <picture>
 <source type="image/webp" srcset="assets/images/webp/bl1-220x220.webp">
+<img src="assets/images/bl1-220x220.png" alt="House-mate" title="">
 
 </picture>
 
@@ -162,7 +164,7 @@
 
 <picture>
 <source type="image/webp" srcset="assets/images/webp/bl2-220x220.webp">
-
+<img src="assets/images/bl2-220x220.png" alt="House-mate" title="">
 
 </picture>
 
@@ -182,6 +184,7 @@ Now it's possible with small motors that sit in the headrail and control the til
 
 <picture>
 <source type="image/webp" srcset="assets/images/webp/blind4-220x220.webp">
+<img src="assets/images/blind4-220x220.png" alt="House-mate" title="">
 
 </picture>
 
