--- a/cases.html
+++ b/cases.html
@@ -58,6 +58,7 @@
                         
 <picture>
 <source type="image/webp" srcset="assets/images/webp/output-onlinepngtools-1-removebg-preview-2-96x88.webp">
+<img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="Mobirise" title="" style="height: 3.8rem;">
 
 </picture>
                     </a>
@@ -123,6 +124,7 @@
 
 <picture>
 <source type="image/webp" srcset="assets/images/webp/capture-596x328.webp">
+<img src="assets/images/capture-596x328.png" alt="House-mate" title="">
 
 </picture>
 
@@ -143,6 +145,7 @@
 
 <picture>
 <source type="image/webp" srcset="assets/images/webp/capture-390x383.webp">
+<img src="assets/images/capture-390x383.png" alt="House-mate" title="">
 
 </picture>
 
