--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
              
 <picture>
 <source type="image/webp" srcset="assets/images/webp/output-onlinepngtools-1-removebg-preview-2-96x88.webp">
-
+<img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="House-mate" title="" style="height: 3.8rem;">
 
 </picture>
 
@@ -159,7 +159,7 @@
 <div class="mbr-figure m-auto" style="width: 50%;">
 <picture>
 <source type="image/webp" srcset="assets/images/webp/b-1-982x486.webp">
-
+<img src="assets/images/b-1-982x486.jpg" alt="House-mate" title="">
 
 </picture>
  </div>
@@ -253,7 +253,7 @@
 <div class="mbr-figure m-auto" style="width: 50%;">
 <picture>
 <source type="image/webp" srcset="assets/images/webp/a-1-982x552.webp">
-
+<img src="assets/images/a-1-982x552.jpg" alt="Cmon" title="">
 
 </picture>
  </div>
