--- a/cbus.html
+++ b/cbus.html
@@ -56,6 +56,7 @@
                     <a href="index.html">
                         <picture>
 <source type="image/webp" srcset="assets/images/webp/output-onlinepngtools-1-removebg-preview-2-96x88.webp">
+<img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="Mobirise" title="" style="height: 3.8rem;">
 
 </picture>
                     </a>
@@ -123,6 +124,7 @@
 
 <picture>
 <source type="image/webp" srcset="assets/images/webp/cbus-5500-220x220.webp">
+<img src="assets/images/cbus-5500-220x220.png" alt="House-mate" title="">
 
 </picture>
 
@@ -140,7 +142,7 @@
                        
 <picture>
 <source type="image/webp" srcset="assets/images/webp/cb3-220x220.webp">
-
+<img src="assets/images/cb3-220x220.png" alt="House-mate" title="">
 
 </picture>
                     </div>
@@ -158,7 +160,7 @@
                        
 <picture>
 <source type="image/webp" srcset="assets/images/webp/hk3-220x220.webp">
-
+<img src="assets/images/hk3-220x220.png" alt="House-mate" title="">
 
 </picture>
 
