--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
                             </span>
                             <div class="b-info b-adress">
                                 <h5 class="align-left mbr-fonts-style display-5">About Us</h5>
-                                <p class="mbr-text align-left mbr-fonts-style display-7">Our team blends skillsets from electrical engineering to IT architecture and we are continually learning from our experiences in delivering exciting and practical solutions to market.<br></p>
+                                <p class="mbr-text align-left mbr-fonts-style display-7">Our team blends skillsets from electrical engineering to IT architecture and we are continually learning from our experiences in delivering exciting and practical solutions to market.<br><br><a href="https://www.auslistings.org/Australia-Related/General/C24-200-1-0.htm">Find us in Auslisting.Org's&nbsp;Directory</a></p>
                             </div>
                         </div>
                     </div>
