--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                        <picture>
+<source type="image/webp" srcset="assets/images/webp/output-onlinepngtools-1-removebg-preview-2-96x88.webp">
+<img src="assets/images/output-onlinepngtools-1-removebg-preview-2-96x88.png" alt="House-mate" title="" style="height: 3.8rem;">
+
+</picture>
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
@@ -144,7 +148,11 @@
             </div>
 
             <div class="mbr-figure m-auto" style="width: 30%;">
-                <img src="assets/images/front1-351x243.jpg" alt="Mobirise" title="">
+               <picture>
+<source type="image/webp" srcset="assets/images/webp/a-1-982x552.webp">
+<img src="assets/images/front1-351x243.jpg" alt="Cmon" title="">
+
+</picture>
             </div>
 
             <div class="block-content align-left">
@@ -217,7 +225,11 @@
             </div>
 
             <div class="mbr-figure m-auto" style="width: 30%;">
-                <img src="assets/images/a-1-982x552.jpg" alt="Mobirise" title="">
+                <picture>
+<source type="image/webp" srcset="assets/images/webp/b-1-982x486.webp">
+<img src="assets/images/b-1-982x486.jpg" alt="House-mate" title="">
+
+</picture>
             </div>
 
             <div class="block-content align-left">
