facebook below start of body
first six lines of code

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
   
 </head>
 <body>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v13.0" nonce="asnA5MV1"></script>
+  <section class="menu cid-sqASln05x4" once="menu" id="menu2-36">
+<div class="fb-like" data-href="https://house-mate.com.au/" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>  
+
+
   <section class="menu cid-sqASln05x4" once="menu" id="menu2-36">
 
     
